--- a/.github/actions/blob-deploy/action.yml
+++ b/.github/actions/blob-deploy/action.yml
@@ -4,7 +4,7 @@
 #
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 ---
-name: 'Azure Static Site Deploy'
+name: 'Vercel Static Site Deploy'
 description: 'Deploy Static Site to Azure Blob Storage $web'
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
